feat: nft 登记事件监听，并存入数据库
