# app/contractlistener/cmd/contractlistener/main.go
@@ -1,110 +1,112 @@
 package main
 
 import (
+	script "4clabs-server/api/script/v1"
+	forClabs "4clabs-server/app/4clabs-server/pkg/contract"
+	"4clabs-server/app/contractlistener/internal/conf"
+	"bytes"
 	"context"
+	"encoding/json"
+	"flag"
 	"fmt"
 	"github.com/ethereum/go-ethereum"
 	"github.com/ethereum/go-ethereum/common"
 	"github.com/ethereum/go-ethereum/core/types"
 	"github.com/ethereum/go-ethereum/ethclient"
+	"github.com/go-kratos/kratos/v2/config"
+	"github.com/go-kratos/kratos/v2/config/file"
 	"github.com/go-kratos/kratos/v2/log"
+	"github.com/go-kratos/kratos/v2/middleware/tracing"
+	"github.com/pkg/errors"
+	"io"
+	"math/big"
+	"net/http"
+	"os"
+	"time"
 )
 
-//// go build -ldflags "-X main.Version=x.y.z"
-//var (
-//	// Name is the name of the compiled software.
-//	Name = "4clabs-contract-service"
-//	// Version is the version of the compiled software.
-//	Version string
-//	// flagconf is the config flag.
-//	flagconf string
-//
-//	environment = os.Getenv("environment")
-//	id, _       = os.Hostname()
-//)
-//
-//func newApp(logger log.Logger, hs *http.Server, gs *grpc.Server) *kratos.App {
-//	return kratos.New(
-//		kratos.ID(id),
-//		kratos.Name(Name),
-//		kratos.Version(Version),
-//		kratos.Metadata(map[string]string{}),
-//		kratos.Logger(logger),
-//		kratos.Server(
-//			hs,
-//			gs,
-//		),
-//	)
-//}
+// go build -ldflags "-X main.Version=x.y.z"
+var (
+	// Name is the name of the compiled software.
+	Name = "4clabs-contract-service"
+	// Version is the version of the compiled software.
+	Version string
+	// flagconf is the config flag.
+	flagconf string
+
+	environment = os.Getenv("environment")
+	id, _       = os.Hostname()
+)
 
 func main() {
-	//flag.Parse()
-	//logger := log.With(log.NewStdLogger(os.Stdout),
-	//	"ts", log.DefaultTimestamp,
-	//	"caller", log.DefaultCaller,
-	//	"service.id", id,
-	//	"service.name", Name,
-	//	"service.version", Version,
-	//	"trace_id", tracing.TraceID(),
-	//	"span_id", tracing.SpanID(),
-	//)
-	//c := config.New(
-	//	config.WithSource(
-	//		file.NewSource(fmt.Sprintf("./configs/config.%s.yaml", environment)),
-	//	),
-	//)
-	//
-	//defer c.Close()
-	//
-	//if err := c.Load(); err != nil {
-	//	panic(err)
-	//}
-	//
-	//var bc conf.Bootstrap
-	//if err := c.Scan(&bc); err != nil {
-	//	panic(err)
-	//}
-	//authUtitls := auth.NewJwtUtils(
-	//	bc.Server.Http.Jwt.Key,
-	//	bc.Server.Http.Jwt.Timeout.Seconds,
-	//	bc.Server.Http.Jwt.MinRefresh.Seconds,
-	//)
-	//
-	//app, cleanup, err := wireApp(&bc, logger, authUtitls, auth.NewUtils())
-	//if err != nil {
-	//	panic(err)
-	//}
-	//defer cleanup()
-	//
-	//// start and wait for stop signal
-	//if err := app.Run(); err != nil {
-	//	panic(err)
-	//}
-	client, err := ethclient.Dial("wss://rinkeby.infura.io/ws/v3/011c5e6aa1fc44daab9ab5e51baeb9fb")
-	if err != nil {
-		log.Fatal(err)
+	flag.Parse()
+	logger := log.With(log.NewStdLogger(os.Stdout),
+		"ts", log.DefaultTimestamp,
+		"caller", log.DefaultCaller,
+		"service.id", id,
+		"service.name", Name,
+		"service.version", Version,
+		"trace_id", tracing.TraceID(),
+		"span_id", tracing.SpanID(),
+	)
+	c := config.New(
+		config.WithSource(
+			file.NewSource(fmt.Sprintf("./configs/config.%s.yaml", environment)),
+		),
+	)
+
+	defer c.Close()
+	if err := c.Load(); err != nil {
+		panic(err)
 	}
 
-	contractAddress := common.HexToAddress("0xE71b4b58D34364552C455847E1AFCAE88b29eF9F")
+	var bc conf.Bootstrap
+	if err := c.Scan(&bc); err != nil {
+		panic(err)
+	}
+
+	app, _, err := wireApp(&bc, logger)
+	if err != nil {
+		panic(err)
+	}
+
+	begin := time.Now()
+	if err := app.Run(); err != nil {
+		panic(err)
+	}
+	fmt.Printf("the task cost : %s\n", time.Now().Sub(begin).String())
+
+}
+
+type ContractScriptApplication struct {
+	bc *conf.Bootstrap
+}
+
+func NewCronJobApplication(bc *conf.Bootstrap) *ContractScriptApplication {
+	return &ContractScriptApplication{bc: bc}
+}
+
+func (app *ContractScriptApplication) Run() error {
+	//root := context.Background()
+	println(" ----------- run")
+	client, err := ethclient.Dial(app.bc.ThirdParty.Contract.Rawurl)
+	if err != nil {
+		return err
+	}
+
+	contract := common.HexToAddress(app.bc.ThirdParty.Contract.Address)
+	instance, err := forClabs.NewForClabs(contract, client)
+
 	query := ethereum.FilterQuery{
-		Addresses: []common.Address{contractAddress},
+		FromBlock: big.NewInt(app.bc.ThirdParty.Contract.FromBlock),
+		Addresses: []common.Address{contract},
 	}
-
-	//instance, err := forClabs.NewForClabs(contractAddress, client)
-
-	header, err := client.HeaderByNumber(context.Background(), nil)
-	if err != nil {
-		log.Fatal(err)
-	}
-
-	fmt.Println("最新区块", header.Number.String())
 
 	logs := make(chan types.Log)
 	sub, err := client.SubscribeFilterLogs(context.Background(), query, logs)
 	if err != nil {
 		log.Fatal(err)
 	}
-	fmt.Println(client.BlockNumber(context.TODO()))
 
 	for {
 		select {
@@ -112,7 +114,41 @@ func main() {
 			log.Fatal(err)
 		case vLog := <-logs:
 			fmt.Println(vLog) // pointer to event log
+			cata, err := instance.ParseContractAndTokenAuthorized(vLog)
+			if err != nil {
+				println("error: ", fmt.Sprint(err))
+			}
+			if cata != nil {
+				println(fmt.Sprint(cata))
+				request := script.ScriptRegisterRequest{
+					ContractAddress: cata.ContractAddress.String(),
+					TokenId:         cata.TokenId.String(),
+					UserAddress:     cata.Holder.String(),
+				}
+				jsonBytes, _ := json.Marshal(request)
+				url := fmt.Sprintf("%s/v1/script/register/update", app.bc.ThirdParty.ScriptUrl)
+				_, err = app.basePost(context.Background(), url, jsonBytes)
+				if err != nil {
+					return err
+				}
+			}
 		}
 	}
+	println(" ----------- end")
+	return nil
+}
 
+func (s *ContractScriptApplication) basePost(ctx context.Context, url string, json []byte) (io.ReadCloser, error) {
+	req, _ := http.NewRequestWithContext(ctx, http.MethodPost, url, bytes.NewBuffer(json))
+	req.Header.Set("Content-Type", "application/json")
+
+	res, err := http.DefaultClient.Do(req)
+
+	if err != nil {
+		return nil, errors.Wrapf(err, "url : %s", url)
+	}
+	if res.StatusCode != http.StatusOK {
+		return nil, errors.Wrapf(fmt.Errorf("status code %d is not ok", res.StatusCode), "url : %s", url)
+	}
+	return res.Body, nil
 }
